prevent line-break on prices list.

--- a/css/style.css
+++ b/css/style.css
@@ -8466,7 +8466,7 @@ h6 {
   .graph-prices__price, .graph-prices__amount {
     font-size: 12px;
     line-height: 1.4;
-    /*font-weight: 700;		*/
+    white-space: nowrap;
     text-align: left;
     padding: 0 5px 0 0; }
     .graph-prices__price span, .graph-prices__amount span {
