--- a/sass/partials/content/_graph-prices.scss
+++ b/sass/partials/content/_graph-prices.scss
@@ -472,7 +472,7 @@
 	&__price, &__amount {
 		font-size: 12px;
 	   	line-height: 1.4;
-		/*font-weight: 700;		*/
+		white-space: nowrap;
 		text-align: left;
 		padding: 0 5px 0 0;
 
